--- a/react-app/src/components/PreviewCards/PreviewCards.css
+++ b/react-app/src/components/PreviewCards/PreviewCards.css
@@ -28,8 +28,7 @@
 .preview-cards-container {
   display: flex;
   flex-direction: column;
-  padding-bottom: 3rem;
-  /* width: 100%; */
+
   height: 85vh;
   font-family: 'Open Sans', sans-serif;
   z-index: 10;
@@ -113,6 +112,7 @@
   position: relative;
   display: flex;
   align-items: center;
+  justify-content: center;
   padding: 1rem;
   padding-top: 4rem;
   padding-bottom: 3rem;
